fix overlaps

--- a/app/assets/stylesheets/map.scss
+++ b/app/assets/stylesheets/map.scss
@@ -323,9 +323,9 @@ aside {
 .leaflet-top .leaflet-control-zoom {
   margin-top: $sidebar-height + 10;
 }
-img[src*="_on.png"] {
-  z-index: 2000 !important;
-}
+//img[src*="_on.png"] {
+//  z-index: 2000 !important;
+//}
 
 // Media queries ---------------------------------------------------------------
 
